kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mad-learning-web
spec:
  selector:
    app: mad-learning-web
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
