kubernetes/ingress-production.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mad-learning-web
  namespace: mad-learning
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: learning.mad.itera.no
      http:
        paths:
          - backend:
              serviceName: mad-learning-web
              servicePort: 8080
            path: /
    tls:
        - hosts:
            - learning.mad.itera.no
        secretName: mad-learning-web-tls-secret
